--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
   "extends": ["config:base"],
+  "baseBranches": ["develop"],
   "automerge": true,
   "vulnerabilityAlerts": { "enabled": true },
   "lockFileMaintenance": { "enabled": true }
