--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "husky": "5.2.0",
     "lint-staged": "10.5.4",
+    "path": "^0.12.7",
     "prettier": "2.2.1",
     "typescript": "4.2.3"
   }
