:construction_worker: huskyの修正

--- a/package.json
+++ b/package.json
@@ -14,15 +14,9 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "npm run lint && npm run format",
       "pre-push": "npm run type-check"
     }
-  },
-  "lint-staged": {
-    "*.@(ts|tsx)": [
-      "npm run lint",
-      "npm run format"
-    ]
   },
   "dependencies": {
     "next": "10.0.9",
