--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,9 @@
   "major": {
     "automerge": true
   },
-  "patch": { "automerge": true },
+  "patch": {
+    "automerge": true
+  },
   "packageRules": [
     {
       "depTypeList": ["devDependencies"],
